# coursework_2

./: .coverage  .gitignore  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
src/: abs_api_class.py  abs_file_handler.py  json_holder.py  user_interface.py  vacancy_info.py
tests/: conftest.py  test_abs_api_class.py  test_abs_file_handler.py  test_vacancy_info.py
