[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = ["Buzin Dmitriy <89111703879@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
